# unhappy_evolution

./: .gitignore  .lldbinit  CMakeLists.txt  README.md  Unhappy.cpp  Unhappy.h  main.cpp  unhappy.cpp  unhappy.h  unhappy.ui  unhappy_evolution_zh_CN.ts
code_snapshot/: main_view.cpp  main_view.h  main_view.ui
code_snapshot/snap_linker/: snap_linker.cpp  snap_linker.h
code_snapshot/snap_selector/: snap_selector.cpp  snap_selector.h  snap_selector.ui
code_snapshot/snap_viewer/: snap_viewer.cpp  snap_viewer.h  snap_viewer.ui
code_snapshot/source/: snap_source.qrc
code_snapshot/source/command_line/: luigi_run_command.txt
code_snapshot/source/python/: luigi_build_run.txt  singleton_meta.txt
code_snapshot/source/qt/: show_all_qrc.txt
file_encoding_transform/: drag_in.cpp  drag_in.h  drag_in.ui  file_encoding_transform_drag_in.cpp  file_encoding_transform_drag_in.h  file_encoding_transform_drag_in.ui  file_encoding_transform_drag_in_style.h  file_encoding_transform_main.cpp  file_encoding_transform_main.h  file_encoding_transform_main.ui  file_encoding_transform_result.cpp  file_encoding_transform_result.h  main_view.cpp  main_view.h  main_view.ui  result_view.cpp  result_view.h  result_view.ui
parse_json/: main_view.cpp  main_view.h  main_view.ui
parse_json/json_plain_viewer/: json_plain_viewer.cpp  json_plain_viewer.h
parse_json/json_tree_viewer/: json_tree_viewer.cpp  json_tree_viewer.h
parse_json/json_tree_viewer/json_tree_model/: json_tree_model.cpp  json_tree_model.h  readme.md
picture_to_base64/: main_view.cpp  main_view.h  main_view.ui
picture_to_base64/clipboard_picture_viewer/: clipboard_picture_viewer.cpp  clipboard_picture_viewer.h
preview_csv/: custom_csv_model.cpp  custom_csv_model.h  file_path_getter.cpp  file_path_getter.h  main_view.cpp  main_view.h  main_view.ui  parse_option.cpp  parse_option.h
preview_csv/data_model/: custom_csv_model.cpp  custom_csv_model.h
preview_csv/file_getter/: file_path_getter.cpp  file_path_getter.h
preview_csv/file_summary/: file_summary.cpp  file_summary.h  file_summary.ui
preview_csv/parse_option/: parse_option.cpp  parse_option.h  parse_option.ui
preview_csv/preview_content/: preview_content.cpp  preview_content.h  preview_content.ui
re_test/: main_view.cpp  main_view.h  main_view.ui
re_test/re_input/: re_input.cpp  re_input.h  re_input.ui
re_test/string_match/: string_match.cpp  string_match.h  string_match.ui
re_test/string_raw/: string_raw.cpp  string_raw.h  string_raw.ui
static/: unhappy_mac_icon.icns
tools/: csv_line_parser.cpp  csv_line_parser.h
